--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
-Rename index.html.txt to index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Will You Be My Valentine?</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(to bottom, #ff9a9e, #fad0c4);
+      font-family: 'Segoe UI', sans-serif;
+      color: #333;
+      overflow: hidden;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 2rem;
+      color: #ff4d4d;
+      text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.8);
+    }
+    .buttons {
+      position: relative;
+      display: flex;
+      gap: 3rem;
+    }
+    button {
+      padding: 1rem 3rem;
+      font-size: 1.5rem;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      transition: all 0.3s;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    }
+    #yesBtn {
+      background: #ff4d4d;
+      color: white;
+    }
+    #yesBtn:hover {
+      transform: scale(1.1);
+      background: #e63946;
+    }
+    #noBtn {
+      background: white;
+      color: #ff4d4d;
+      border: 2px solid #ff4d4d;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+    #catPopup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0,0,0,0.7);
+      padding: 2rem;
+      border-radius: 20px;
+      text-align: center;
+      color: white;
+      max-width: 90%;
+      z-index: 100;
+    }
+    #catPopup img {
+      max-width: 300px;
+      border-radius: 15px;
+      margin-bottom: 1rem;
+    }
+    #catPopup h2 {
+      margin: 0.5rem 0;
+    }
+  </style>
+</head>
+<body>
+  <h1>Will you be my Valentine? 💕</h1>
+
+  <div class="buttons">
+    <button id="yesBtn">Yes 😍</button>
+    <button id="noBtn">No 😢</button>
+  </div>
+
+  <div id="catPopup">
+    <img src="https://i.imgur.com/EXAMPLE_CAT_MEME.jpg" alt="Cute annoyed cat">
+    <h2>Stop messing with me! 😾</h2>
+    <p>Just say yes already~ 🐱❤️</p>
+    <button onclick="document.getElementById('catPopup').style.display='none'; alert('Yay! ❤️ I love you!');">Okay okay, Yes!</button>
+  </div>
+
+  <script>
+    const noBtn = document.getElementById('noBtn');
+    const yesBtn = document.getElementById('yesBtn');
+    const catPopup = document.getElementById('catPopup');
+
+    let attempts = 0;
+
+    noBtn.addEventListener('mouseover', () => {
+      attempts++;
+      const x = Math.random() * (window.innerWidth - noBtn.offsetWidth - 100);
+      const y = Math.random() * (window.innerHeight - noBtn.offsetHeight - 100);
+      noBtn.style.left = `${x}px`;
+      noBtn.style.top = `${y}px`;
+      noBtn.style.transform = 'none'; // override initial centering
+
+      // After 3-5 attempts, show cat popup instead of letting them keep trying
+      if (attempts >= 4) {
+        catPopup.style.display = 'block';
+        noBtn.style.display = 'none'; // hide No button
+      }
+    });
+
+    yesBtn.addEventListener('click', () => {
+      alert("Yay! You said yes! ❤️ I love you so much! 😘");
+      // Optional: redirect or show confetti/animation here
+    });
+  </script>
+</body>
+</html>
